<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTieuDe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/txt_tieude"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnThem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_them"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnXem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_xem"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnQuanLy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_quanly"
        android:textAllCaps="false" />
</LinearLayout>
